src/gui/scss/core/_bootstrap-overrides.scss
/**
* Bootstrap Overrides
*/
.modal-header {
    border-bottom: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
    .close {
        order: 2;
        margin: 0;
        font-size: 35px;
        font-weight: 100;
        text-shadow: none;
        float: none;
        margin-left: auto;
    }
}

.sticky-header {
    position: sticky;
    top: 22px;
    background-color: $light-background-color;
    border-top-left-radius: 8px;
    border-top-right-radius: 8px;
    z-index: 999;
    &.is-stuck {
        border-bottom: 1px solid #24262A;
        margin-bottom: 10px;
        box-shadow: 0 6px 9px -2px #0000004d;
    }
}

.modal-footer {
    border-top: none;

    &.sticky-footer {
        position: sticky;
        bottom: 0;
        z-index: 999;
        background-color: $light-background-color;
        border-bottom-left-radius: 8px;
        border-bottom-right-radius: 8px;
        &.is-stuck {
            border-top: 1px solid #24262A;
            margin-top: 10px;
            box-shadow: 0 -6px 9px -2px #0000004d;
        }
    }
}

.effect-footer-sentinel, .fb-scroll-sentinel {
    width: 100%;
}

.modal-content {
    border-radius: 8px;
    background-color: $light-background-color;
    position: relative;
    border: 1px solid transparent;
}
.modal-title {
    font-weight: 100;
    font-size: 25px;
    word-wrap: break-word;
}

.modal:focus {
    outline: none;
}


.modal-sm {
    width: 400px;
}

.modal-md {
    width: 500px;
}

.modal-body {
    padding-top: 0;
    overflow-wrap: break-word;
}

.sub-command,
.general-button-settings {
    .input-group-addon:first-child {
        min-width: 150px;
    }
}

.panel-group {
    margin-bottom: 0px;
}

.well {
    margin-bottom: 0px;
    background: #586163;
    border: none;
}

.well-dark {
    margin-bottom: 0px;
    background: #25282b;
    border: none;
}

textarea.form-control {
    resize: vertical;
}

/* Tabs */

.nav-tabs {
    border-bottom: 1px solid #b1b1b1;
}

.nav-tabs>li.active>a, .nav-tabs>li.active>a:focus, .nav-tabs>li.active>a:hover {
    color: #ffffff;
    background-color: transparent;
    border: 1px solid transparent;
    border-bottom: 1px solid #ffffff;
}

.nav-tabs .nav-link {
    color: #c5c5c5;
}

.nav>li>a:focus, .nav>li>a:hover {
    text-decoration: none;
    background-color: transparent;
}

.nav-tabs>li>a:hover {
    border-color: transparent;
    border-bottom: 1px solid #e4e4e4;
}

.nav-tabs .nav-link:hover {
    color: #e4e4e4;
}

// Buttons

.btn {
    border-radius: 8px;
    padding: 9px 12px;
    transform: scale(1.0) translateZ(0);
    transition-property: transform;
    transition-duration: 0.3s;
    &.btn-lg {
        height: 40px;
        font-size: 14px;
    }
    &.btn-sm {
        padding: 5px 10px !important;
        font-size: 12px;
        line-height: 1.5;
    }
    &.btn-xs {
        padding: 3px 6px !important;
        font-size: 12px !important;
        line-height: 1.5 !important;
    }
    &:hover {
        // transform: scale(1.02) translateZ(0);
    }

}

.btn.dropdown-toggle, .btn.form-control {
    &:hover {
        transform: none;
    }
}

.btn-link {
    &:hover {
        transform: none;
    }
}

.btn-danger:hover,
.btn-default:hover,
.btn-primary:hover,
.btn-secondary:hover,
.btn-success:hover {
    border-color: transparent;
}

.btn-primary {
    background-color: #16809c;
    border-color: transparent;
    &:hover {
        background-color: #1f849e;
    }
}

.btn-default {
    border: 1px solid transparent;
    background-color: $default-btn-bg-color;
    color: $default-btn-text-color;
    &:disabled {
        background-color: $default-btn-bg-color;
        color: $default-btn-text-color;
        opacity: 0.5;
        &:hover {
            background-color: $default-btn-bg-color;
            color: $default-btn-text-color;
            opacity: 0.75;
        };
    }
    &:hover {
        background-color: $default-btn-hover-bg;
        // border-color: $default-btn-hover-border;
        color: $default-btn-text-color;
    }
}

.btn-default.active.focus, .btn-default.active:focus, .btn-default.active:hover, .btn-default:active.focus, .btn-default:active:focus, .btn-default:active:hover, .open>.dropdown-toggle.btn-default.focus, .open>.dropdown-toggle.btn-default:focus, .open>.dropdown-toggle.btn-default:hover {
    color: $default-btn-text-color;
    background-color: $default-btn-hover-bg;
    // border-color: $default-btn-hover-border;
}

.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
    outline: 5px auto lightgray;
    outline-offset: -2px;
}

.btn.active, .btn:active {
    box-shadow: none;
}

.btn-danger, .btn-primary, .btn-success, .btn-secondary {
    padding: 9px 12px;
}

.btn-default.active, .btn-default:active, .open>.dropdown-toggle.btn-default {
    color: $default-btn-text-color;
    background-color: $default-btn-hover-bg;
    border-color: transparent;
}

.dropdown-toggle > .caret {
    margin-left: 5px;
}

.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
    outline: none;
    outline-offset: 0;
    border-color: transparent;
}

.btn-link {
    color: #12d0ff;
    &:hover, &:focus {
        color: #11add4;
    }
}

// Misc

.table-hover > tbody > tr:hover {
    background-color: $light-background-color;
}
.control-list:hover>td, .command-list:hover>td {
    color: $content-text-color;
}

.popover {
    border: 2px solid $dropdown-menu-border;
    background-color: $dropdown-menu-bg;
    border-radius: 8px;
    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
}

.popover.top > .arrow {
    border-top-color: transparent;
    &:after {
        border-top-color: $dropdown-menu-border;
    }
}

.popover.bottom > .arrow {
    border-bottom-color: transparent;
    &:after {
        border-bottom-color: $dropdown-menu-border;
    }
}
/* ... */

